# todo_project_

./: .gitattributes  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  todoapp
alembic/: env.py
alembic/versions/: 1f1a902979c3_initial.py
alembic_/: env.py
alembic_/versions/: 1f1a902979c3_initial.py  5ad7a5f4740e_initial.py
data/: data.sqlite3
infrastructure/docker/: Dockerfile
infrastructure/docker/app/: docker-entrypoint.sh
todo_app/: container.py  main.py
todo_app/core/: config.py  database.py
todo_app/core/config/: .secrets.toml
todo_app/models/: __init__.py  base.py  todo.py  user.py
todo_app/repositories/: __init__.py  todo.py  user_auth.py
todo_app/routers/: index.py  todo.py  user_auth.py
todo_app/schemas/: __init__.py  todo.py  user.py
todo_app/services/: __init__.py  todo.py  user_auth.py
